@@ -66,6 +66,7 @@ if ($permission['viewlog']) {
 
     $PageSpan = PageSpan("<a href=\"?action=searchstats&amp;pages=".$pages."&amp;page=<NUM>\">", 1, $pages, $page);
 ?>
+        <div id="ajaxresponse"></div>
         <table class="list" style="width: 100%">
         <thead>
         <tr>
@@ -73,11 +74,12 @@ if ($permission['viewlog']) {
             <th><?php print $PMF_LANG['ad_searchstats_search_term_count'] ?></th>
             <th><?php print $PMF_LANG['ad_searchstats_search_term_lang'] ?></th>
             <th><?php print $PMF_LANG['ad_searchstats_search_term_percentage'] ?></th>
+            <th>&nbsp;</th>
         </tr>
         </thead>
         <tfoot>
             <tr>
-                <td colspan="4"><?php print $PageSpan; ?></td>
+                <td colspan="5"><?php print $PageSpan; ?></td>
             </tr>
         </tfoot>
         <tbody>
@@ -101,17 +103,48 @@ if ($permission['viewlog']) {
         
         $num = round(($searchItem['number']*100 / $searchesCount), 2);
 ?>
-        <tr>
+        <tr class="row_search_id_<?php print $searchItem['id'] ?>">
             <td><?php print PMF_String::htmlspecialchars($searchItem['searchterm']);  ?></td>
             <td><?php print $searchItem['number'] ?></td>
             <td><?php print $languageCodes[PMF_String::strtoupper($searchItem['lang'])] ?></td>
             <td><?php print $num ?> %</td>
+            <td>
+                <a onclick="deleteSearchTerm('<?php print $searchItem['searchterm'] ?>', <?php print $searchItem['id'] ?>); return false;"
+                   href="javascript:;">
+                    <img src="images/delete.png" width="16" height="16" alt="<?php print $PMF_LANG["ad_news_delete"]; ?>" border="0" />
+                </a>
+            </td>
         </tr>
 <?php
-	}
+    }
 ?>
         </tbody>
         </table>
+        <script type="text/javascript">
+        /* <![CDATA[ */
+        /**
+         * Ajax call to delete search term
+         *
+         * @param searchterm
+         */
+        function deleteSearchTerm(searchterm, searchId)
+        {
+            if (confirm('<?php print $PMF_LANG['ad_user_del_3'] ?>')) {
+                $.getJSON("index.php?action=ajax&ajax=search&ajaxaction=delete_searchterm&searchterm=" + searchterm,
+                function(response) {
+                    if (response == 1) {
+                        $('#ajaxresponse').
+                            html('<?php printf('<p class="success">%s</p>', $PMF_LANG['ad_search_delsuc']) ?>');
+                        $('.row_search_id_' + searchId).fadeOut('slow');
+                    } else {
+                        $('#ajaxresponse').
+                            html('<?php printf('<p class="error">%s</p>', $PMF_LANG['ad_search_delfail']) ?>');
+                    }
+                });
+            }
+        }
+        /* ]]> */
+        </script>
 <?php 
 
 } else {
